SVG alignment fix

--- a/src/components/blocks/MainTechStack/MainTechStack.module.scss
+++ b/src/components/blocks/MainTechStack/MainTechStack.module.scss
@@ -27,6 +27,8 @@
 .icon {
   width: 100px;
   height: 100px;
+  display: flex;
+  align-items: center;
 
   @include mobile {
     width: 50px;
